--- a/finance-control-api/package.json
+++ b/finance-control-api/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "SET NODE_ENV=development& nodemon",
+    "start": "node dist/server.js",
     "start_prod": "SET NODE_ENV=production& nodemon"
   },
   "author": "Diogo Gaio",
