--- a/finance-control-api/package.json
+++ b/finance-control-api/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
     "start": "node dist/server.js",
-    "start_prod": "SET NODE_ENV=production& nodemon"
+    "start_prod": "NODE_ENV=production& nodemon"
   },
   "author": "Diogo Gaio",
   "license": "ISC",
