--- a/finance-control-api/package.json
+++ b/finance-control-api/package.json
@@ -29,6 +29,7 @@
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "node-cron": "^3.0.3",
