--- a/finance-control-mearn/package.json
+++ b/finance-control-mearn/package.json
@@ -37,6 +37,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/google-one-tap": "^1.2.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
