--- a/finance-control-api/package.json
+++ b/finance-control-api/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.5.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
+    "stripe": "^16.12.0",
     "validator": "^13.12.0",
     "xss": "^1.0.15"
   }
