--- a/finance-control-mearn/package.json
+++ b/finance-control-mearn/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.171",
-    "@mui/material": "^5.16.7",
+    "@mui/material": "^5.16.0",
     "@mui/x-date-pickers": "^7.12.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.4",
