--- a/finance-control-api/package.json
+++ b/finance-control-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": " exit 1",
     "dev": "nodemon",
     "start": "node dist/server.js",
     "start_prod": "SET NODE_ENV=production& nodemon",
