--- a/finance-control-api/package.json
+++ b/finance-control-api/package.json
@@ -14,7 +14,13 @@
   "author": "Diogo Gaio",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.16",
+    "@types/validator": "^13.12.2",
     "mongodb-memory-server": "^9.4.1",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
