--- a/finance-control-api/tsconfig.json
+++ b/finance-control-api/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "noEmitOnError": false
+    "noEmitOnError": true
   },
   "include": ["src/**/*", "src/types/**/*"]
 }
