--- a/finance-control-api/tsconfig.json
+++ b/finance-control-api/tsconfig.json
@@ -5,9 +5,7 @@
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "noEmitOnError": true
+    "esModuleInterop": true
   },
   "include": ["src/**/*", "src/types/**/*"]
 }
