--- a/finance-control-mern/package.json
+++ b/finance-control-mern/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.171",
-    "@mui/material": "^5.16.0",
+    "@mui/material": "^5.16.7",
+    "@mui/system": "^6.1.4",
     "@mui/x-date-pickers": "^7.12.0",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
@@ -30,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "localbase": "^0.7.7",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -41,8 +43,9 @@
   "devDependencies": {
     "@types/google-one-tap": "^1.2.6",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/lodash.isequal": "^4.5.8",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
